<resources>
    <string name="app_name">Zap</string>
    <string name="content_title">Zap</string>
    <string name="logout">Logout</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already">Already have an account? Login.</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account? Create One.</string>
    <string name="description">Download the Chrome Extension start getting notifications in your browser!</string>
    <string name="get_access">Enable notification access for Zap</string>
    <string name="notify_description">Without access, Zap can\'t push notifications to your computer.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="get_extension">Download the browser extension</string>
    <string name="extension_description">Search for Zap on the Chrome Web Store and add it as an extension. Firefox support coming soon!</string>
    <string name="rating_title">Like Zap?</string>
    <string name="rating_text">Rate us in the Play Store!</string>
</resources>
