<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <android.support.v7.widget.CardView
        app:cardCornerRadius="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/grey"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:background="@color/colorLight"
                android:layout_width="match_parent"
                android:layout_height="56dp">
                <TextView
                    android:padding="16dp"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_access"/>

            </FrameLayout>

            <TextView
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textColor="@android:color/primary_text_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notify_description"/>

            <Button
                android:layout_marginTop="24dp"
                android:id="@+id/btn_settings"
                android:padding="16dp"
                android:layout_marginBottom="8dp"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_settings"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="24dp"
        app:cardCornerRadius="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/grey"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:background="@color/colorLight"
                android:layout_width="match_parent"
                android:layout_height="56dp">
                <TextView
                    android:padding="16dp"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_extension"/>

            </FrameLayout>

            <TextView
                android:padding="16dp"
                android:textColor="@android:color/primary_text_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extension_description"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatButton
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/primary_text_dark"
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/logout"/>

    </FrameLayout>

</LinearLayout>
